fixtures/uitests/tests/ui/interface_not_sync_and_send.stderr
error[E0277]: `Cell<u32>` cannot be shared between threads safely
 --> $OUT_DIR[uniffi_uitests]/counter.uniffi.rs
  |
  | #[::uniffi::ffi_converter_interface(crate::UniFfiTag)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Cell<u32>` cannot be shared between threads safely
  |
  = help: within `Counter`, the trait `Sync` is not implemented for `Cell<u32>`
note: required because it appears within the type `Counter`
 --> tests/ui/interface_not_sync_and_send.rs:9:12
  |
9 | pub struct Counter {
  |            ^^^^^^^
note: required by a bound in `Interface`
 --> $WORKSPACE/uniffi_core/src/lib.rs
  |
  | pub trait Interface<UT>: Send + Sync + Sized {}
  |                                 ^^^^ required by this bound in `Interface`
  = note: this error originates in the attribute macro `::uniffi::ffi_converter_interface` (in Nightly builds, run with -Z macro-backtrace for more info)
